docs/api/qiskit/0.39/qiskit.transpiler.passes.ContainsInstruction.md
---
title: ContainsInstruction
description: API reference for qiskit.transpiler.passes.ContainsInstruction
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ContainsInstruction
---

# ContainsInstruction

<span id="qiskit.transpiler.passes.ContainsInstruction" />

`ContainsInstruction(instruction_name, recurse=True)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/utils/contains_instruction.py "view source code")

Bases: [`qiskit.transpiler.basepasses.AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

An analysis pass to detect if the DAG contains a specific instruction.

This pass takes in a single instruction name for example `'delay'` and will set the property set `contains_delay` to `True` if the DAG contains that instruction and `False` if it does not.

ContainsInstruction initializer.

**Parameters**

*   **instruction\_name** (*str | Iterable\[str]*) – The instruction or instructions to check are in the DAG. The output in the property set is set to `contains_` prefixed on each value for this parameter.
*   **recurse** (*bool*) – if `True` (default), then recurse into control-flow operations.

## Methods

### name

<span id="qiskit.transpiler.passes.ContainsInstruction.name" />

`ContainsInstruction.name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.ContainsInstruction.run" />

`ContainsInstruction.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/utils/contains_instruction.py "view source code")

Run the ContainsInstruction pass on dag.

## Attributes

<span id="qiskit.transpiler.passes.ContainsInstruction.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.ContainsInstruction.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

